<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/fab_margin">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="644dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.iqbalzauqul.attendees.LoginActivity">

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />



            <ImageView
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:contentDescription="@string/app_name"
                android:cropToPadding="false"
                android:visibility="visible"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/app_name"
                android:textSize="24sp" />

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="114dp">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="vertical"

                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:layout_marginStart="15dp"
                            android:drawableStart="@drawable/ic_email"
                            android:drawableTint="#BC337E"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleContentDescription="description"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="#BC337E">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="15dp"
                            android:layout_marginStart="15dp"
                            android:drawableStart="@drawable/ic_password"
                            android:drawableTint="#BC337E"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_width="260dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/buttonbg"
                        android:text="@string/action_sign_in_short"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/signUpButtonLogin"
                        android:layout_width="260dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/buttonbg"
                        android:text="@string/action_sign_up"
                        android:textColor="#fff" />

                    <Button
                        android:id="@+id/lupaPasswordButton"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_gravity="end"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="31dp"
                        android:layout_marginTop="5dp"
                        android:background="@null"
                        android:text="@string/lupa_password"
                        android:textAllCaps="false" />

                </LinearLayout>

            </ScrollView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
